[package]
name = "epic-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bincode = "1.3.3"
tfhe = { version = "0.10", features = ["boolean", "shortint", "integer"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0.11"
rand = "0.9"
dotenv = "0.15"
clap = { version = "4.3", features = ["derive"] }